ajustes del API a nuevo modelo
se ajustan los estructs del api a los cambios del modelo que se realizaron con @juancsr para la inclusion del movimiento de traslado
